--- a/infrastructure/create_machine_script.tmpl
+++ b/infrastructure/create_machine_script.tmpl
@@ -1,23 +1,25 @@
-#!/bin/bash
+# !/bin/bash
 
-# sudo dnf update
-# # Install docker
-# sudo dnf -y install docker
-# # Install some useful packages (git, vim, psql)
-# sudo dnf -y install git
-# sudo dnf -y install vim
-# sudo dnf install -y postgresql15
+sudo dnf update
+# Install docker
+sudo dnf -y install docker
+# Install some useful packages (git, vim, psql)
+sudo dnf -y install git
+sudo dnf -y install vim
+sudo dnf install -y postgresql15
 
-# # Configure docker
-# sudo service docker start
-# sudo groupadd docker
-# sudo gpasswd -a ec2-user docker
-# sudo usermod -aG docker ec2-user
-# sudo systemctl restart docker
+# Configure docker
+sudo service docker start
+sudo groupadd docker
+sudo gpasswd -a ec2-user docker
+sudo usermod -aG docker ec2-user
+sudo systemctl restart docker
 
-# # Install docker-compose
-# sudo curl -L https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
-# sudo chmod +x /usr/local/bin/docker-compose
+# Install docker-compose
+sudo curl -L https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
+sudo chmod +x /usr/local/bin/docker-compose
 
-# # Automatically start docker with the machine
-# sudo systemctl enable docker.service
+# Automatically start docker with the machine
+sudo systemctl enable docker.service
+
+sudo yum install -y nc
